# agentic-pipeline-ingestor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_TEST_RESULTS.md  ARCHITECTURE.md  COGNEE_REWRITE_SUMMARY.md  DEPLOY_DOKPLOY.md  DEPLOY_PLANO.md  Dockerfile  Dockerfile.base  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CONTEXTUAL_RETRIEVAL.md  LICENSE  Makefile  PHASE2_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION_SUMMARY.md  README.md  SEARCH_OPERATIONS_REPORT.md  VPS_DATABASE_STATUS.md  alembic.ini  docker-compose.dokploy.yml  docker-compose.production.yml  docker-compose.production.yml.backup  pyproject.toml  test_full_system.py
.agents/: ADAPTATION_SUMMARY.md  README.md  openspec_kit.py
.aim/: memory-work.jsonl  memory.jsonl
.sisyphus/drafts/: phase5-6-plan.md
api/: openapi.graphrag.yaml  openapi.yaml
azure/: README.md  aks-deployment.yaml  azuredeploy.json
azure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
config/: litellm.yaml  llm-vision.yaml  llm.yaml  otel-collector-config.yaml  prometheus.yml  vector_store.yaml
docker/: Dockerfile  docker-compose.yml
docs/: API_GUIDE.md  DESTINATIONS_CLIENT_GUIDE.md  GRAPHRAG_OVERVIEW.md  GRAPHRAG_UI_PRD.md  JOB_DESTINATIONS_PRD.md  RAG_SEARCH_CURL_EXAMPLES.md  RAG_STRATEGY_GUIDE.md  UPLOAD_DESTINATIONS_PRD.md  VECTOR_STORE_API_USAGE.md  VECTOR_STORE_DEPLOYMENT_GUIDE.md  content-detection.md  vector_store_api.md
docs/architecture/: hipporag.md
docs/migration/: graphrag-to-cognee.md
docs/usage/: cognee-local.md  hipporag.md
http/: all-searches.http  cognee.graphrag.http  hipporag.graphrag.http  hybrid.http  jobs.http  semantic.http  similar.http  text.http
http/production/: README.md  all-searches.http  cognee.graphrag.http  hipporag.graphrag.http  hybrid.http  jobs.http  semantic.http  similar.http  text.http
migrations/versions/: 000_create_core_tables.py  001_add_content_detection.py  002_add_pgvector_extensions.py  003_add_document_chunks.py  004_add_contextual_retrieval.py  005_add_cache_tables.py  006_add_job_results_table.py  006_add_job_results_table.sql  007_add_chunk_unique_constraint.py  008_add_audit_and_webhook_tables.py  009_add_search_vector_column.py  010_add_chunk_quality_score.py  011_add_document_entities.py  012_add_search_analytics.py  013_add_sparse_vectors.py  014_add_chunk_embeddings.py  015_add_cognee_pgvector_schema.py
openspec/: GRAPHRAG_IMPLEMENTATION_SUMMARY.md
ralph-loop/: AGENT_STRUCTURE.md  EXAMPLE_USAGE.md  INTEGRATION.md  README.md  ralph-orchestrator.yaml
ralph-loop/subagents/: backend-developer.yaml  db-agent.yaml  frontend-developer.yaml  qa-agent.yaml  tester-agent.yaml
ralph-loop/system-prompts/: backend-developer.md  db-agent.md  frontend-developer.md  qa-agent.md  ralph-orchestrator.md  tester-agent.md
ralph-loop/templates/: implementation-plan.md
scripts/: MIGRATION_README.md  VPS_DATABASE_README.md  apply_vps_fix.sh  init_db.py  init_vector_store.py  load_test.py  migrate_to_cognee_local.py  run-e2e-tests.sh  run_vps_migrations.sh  test_db_persistence.py  test_pipeline_manual.py  verify_vps.sh  verify_vps_database.py  verify_vps_database_complete.py  vps_database_fix.sql  vps_database_setup.sql
sdd-agents/: README.md  sdd-orchestrator.yaml
sdd-agents/subagents/: implementer.yaml  reviewer.yaml  spec-writer.yaml
sdd-agents/system-prompts/: implementer.md  orchestrator.md  reviewer.md  spec-writer.md
sdd-agents/templates/: spec-template.md
sdks/: README.md  generate.py
shared/: TRANSACTION_FIXES_SUMMARY.md  api-contracts.json  db-schema.md
shared/qa-reports/: advanced-rag-techniques-2024-2025-research.md  codebase-review-report.md  documentation-validation-report.md  mypy-error-analysis-2026-02-18.md  qa-report-2025-02-24-engine-job-cache-fix.md  qa-report-2026-02-28-hipporag-documentation.md  qa-report-2026-02-28-task13-migration-docs.md  qa-report-2026-03-01-openapi-compliance.md  vector-store-qa-report.md
shared/research-reports/: advanced-rag-deepresearch-summary-2025.md  cognee-vs-lightrag-vs-hipporag-comparison.md  cutting-edge-rag-approaches-2025.md  graphrag-comparison-corrected-2025.md  graphrag-comparison-lightrag-hipporag-cognee.md
shared/test-results/: integration_test_summary.md
specs/: spec-2026-02-16-agentic-pipeline-ingestor.md
src/: __init__.py  config.py  main.py
src/api/: __init__.py  base_models.py  dependencies.py  detection_models.py  models.py
src/audit/: __init__.py  logger.py  models.py
src/auth/: __init__.py  api_key.py  azure_ad.py  base.py  dependencies.py  jwt.py  oauth2.py  rbac.py
src/config/: __init__.py  vector_store.py
src/core/: decisions.py  detection.py  dlq.py  engine.py  entity_extraction.py  file_storage.py  healing.py  job_context.py  learning.py  optimizations.py  parser_selection.py  pipeline.py  quality.py  queue.py  retry.py  routing.py  webhook_delivery.py  webhooks.py
src/db/: __init__.py  models.py  transaction.py
src/infrastructure/: __init__.py
src/lineage/: __init__.py  models.py  tracker.py
src/llm/: __init__.py  config.py  provider.py
src/observability/: __init__.py  genai_spans.py  logging.py  metrics.py  middleware.py  tracing.py
src/plugins/: __init__.py  base.py  loaders.py  registry.py
src/rag/: __init__.py  cache.py  chunking.py  classification.py  contextual.py  embeddings.py  metrics_store.py  models.py  router.py
src/retention/: __init__.py  manager.py
src/services/: __init__.py  embedding_service.py  hybrid_search_service.py  text_search_service.py  vector_search_service.py
src/vector_store_config/: __init__.py  vector_store.py
src/worker/: __init__.py  main.py  processor.py
tests/: test_pipeline_integration.py  test_rag_api.py
tests/contract/: __init__.py  conftest.py  test_openapi.py  test_openapi_graphrag.py
tests/data/: additional_test.docx  additional_test.txt  sample.txt  (+1 more)
(+359 files in other folders)
